--- a/www/templates/tab-signup.html
+++ b/www/templates/tab-signup.html
@@ -1,5 +1,13 @@
-<ion-view>
+<ion-view title="SIGN UP" hide-nav-bar="false" class="userAuth">
 	<ion-content>
-		<a href="#/tab/signup/realtor">Create Real Estate Agent Account</a>
+		<div style="padding:10px;">
+			<h5 style="color:#fff;">Create a Homeowner/Tenant Account</h5>
+			<a class="button button-block progress-button" href="#/home/signup/homeowner">Redeem Activation Code</a>
+		</div>
+
+		<div style="padding:10px;">
+			<h5 style="color:#fff;">Create An Agent Account</h5>
+			<a class="button button-block progress-button" ui-sref="home.realtor-step-1">Create Real Estate Agent Account</a>
+		</div>
 	</ion-content>
 </ion-view>
