--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,19 +1,20 @@
 <ion-nav-view name="home-dash">
-	<ion-view title="TurnKey Assist" hide-nav-bar="true">
+	<ion-view title="TurnKey Assist" hide-nav-bar="true" style="background-color:#2f2f2f; background-image: url('img/background_blur.png'); background-position: center;background-size:100%;">
 	  <ion-content>
-	 	<h1 class="padding" align="center">TurnKey Assist</h1>	
-	 	
+	 	<span style="text-align:center;">
+	 		<img src="img/TurnkeyAssist_logo.png" style="display:block; width:80%; margin: 35px auto;">
+	 	</span>	 	
 	 	<div>
-	 			<h3 style="text-align:center;">What is TurnKey Personal Home Organizer?</h3>
-	 			<ion-slide-box on-slide-changed="slideHasChanged($index)" style="top:300px;height:250px;">
+	 			<ion-slide-box on-slide-changed="slideHasChanged($index)" style="top:185px;height:250px;">
 	 			
-				  <ion-slide>  
+				  <ion-slide class="padding"> 
+				  	<h3 style="text-align:center; color:white;">What is TurnKey Personal Home Organizer?</h3> 
 				    <div><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut nunc sollicitudin, convallis sem nec, imperdiet diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Ut purus tellus, consequat eget vestibulum a, tempus eget augue. Suspendisse potenti. Maecenas in fringilla felis, ac pharetra odio. Nullam ac hendrerit dui.</p></div>
 				  </ion-slide>
-				  <ion-slide>
+				  <ion-slide class="padding">
 				    <div><p>Aliquam commodo mi sit amet nulla ornare, non gravida diam rutrum. In hac habitasse platea dictumst. Vestibulum ullamcorper leo mauris, a porttitor magna fermentum et. Praesent molestie purus id vehicula dictum. Cras viverra lectus ac odio ultrices dignissim. Vestibulum a varius est. Suspendisse et ipsum tempus, fermentum nisl vitae, ullamcorper magna. Duis libero risus, posuere a bibendum sed, ornare sit amet metus.</p></div>
 				  </ion-slide>
-				  <ion-slide >
+				  <ion-slide class="padding">
 				    <div><p>Phasellus lobortis tempor diam, sed varius lectus posuere in. Vestibulum et sodales elit. Duis ullamcorper odio pellentesque lorem condimentum, id cursus diam luctus. Vivamus dictum odio a ante sagittis suscipit. Nulla venenatis justo erat, vel tincidunt quam varius et. Sed ut dapibus ex. Donec pulvinar ante lacus, posuere vestibulum urna gravida sit amet.</p></div>
 				  </ion-slide>
 				</ion-slide-box>
