--- a/www/templates/tab-signup.html
+++ b/www/templates/tab-signup.html
@@ -1,12 +1,12 @@
 <ion-view title="SIGN UP" hide-nav-bar="false" class="userAuth">
 	<ion-content>
-		<div style="padding:10px;">
-			<h5 style="color:#fff;">Create a Homeowner/Tenant Account</h5>
-			<a class="button button-block progress-button" href="#/home/signup/homeowner">Redeem Activation Code</a>
+		<div>
+			<h4>Create a Homeowner/Tenant Account</h4>
+			<a class="button button-block progress-button" ui-sref="home.homeowner-signup">Redeem Activation Code</a>
 		</div>
 
-		<div style="padding:10px;">
-			<h5 style="color:#fff;">Create An Agent Account</h5>
+		<div>
+			<h4>Create An Agent Account</h4>
 			<a class="button button-block progress-button" ui-sref="home.realtor-step-1">Create Real Estate Agent Account</a>
 		</div>
 	</ion-content>
