--- a/www/templates/client-dashboard.html
+++ b/www/templates/client-dashboard.html
@@ -1,4 +1,4 @@
-<ion-view class="clientDash">
+<ion-view class="clientDash" hide-nav-bar="true">
 	<ion-header-bar align-title="center">
 		<button class="button button-clear icon ion-navicon"></button>
 		<div class="title"><p style="font-size:14px;">Address:</p><p class="title" style="top:13.5px;">419 Avenue Toronto, Ontario{{client.address}}</p></div>
