--- a/www/templates/client-step2.html
+++ b/www/templates/client-step2.html
@@ -25,7 +25,7 @@
 				</div>
 			</div>
 
-			<button class="button button-full progress-button" ui-sref="home.client-dashboard">Save</button>
+			<button class="button button-full progress-button" ui-sref="home.login">Save</button>
 		</form>
 	</ion-content>
 </ion-view>
