--- a/www/templates/realtor-step-2.html
+++ b/www/templates/realtor-step-2.html
@@ -4,12 +4,12 @@
 		<div class="list">
 			<form>
 				<h4>Profile Photo</h4>
-				<div class="item-input-inset">
-					<label class="item item-input" style="margin-right:0px">
-						<input type="text" placeholder="URL"></label>
-					</label>
-					<button class="button progress-button">Upload</button>
-				</div>
+				<div class="item-input-inset" style="padding-left:0px;">
+				<label class="item item-input" style="margin-right:0px;width:75%;">
+					<input type="text" placeholder="URL">
+				</label>
+				<button class="button progress-button" style="width:25%;">Upload</button>
+			</div>
 				
 				<h4>Status Message & Bio</h4>
 				<label class="item item-input">
