--- a/www/templates/tab-login.html
+++ b/www/templates/tab-login.html
@@ -1,5 +1,5 @@
-<ion-view title="LOGIN" hide-nav-bar="fasle">
-	<ion-content>
+<ion-view title="LOGIN" hide-nav-bar="false">
+	<ion-content class="userAuth login-page">
 		<div class="list">
 			<label class="item item-input">
 				<input type="text" placeholder="Username"/>
@@ -7,7 +7,7 @@
 			<label class="item item-input">
 				<input type="password" placeholder="Password">
 			</label>
-			<button class="button button-full button-positive">Login</button>
+			<button class="button button-full progress-button" ui-sref="dashboard.client-dashboard">Login</button>
 		</div><a href="#/forgot-password">Forgot Password</a>
 	</ion-content>
 </ion-view>
