--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,13 +11,15 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Sign up tab -->
-   <ion-tab title="Sign Up" icon-off="ion-ios-personadd-outline" icon-on="ion-ios-personadd" ui-sref="home.signup">
+  <ion-tab title="Sign" icon-off="ion-ios-personadd-outline" icon-on="ion-ios-personadd" ui-sref="home.signup">
     <ion-nav-view name="home-signup"></ion-nav-view>
   </ion-tab> 
 
-    <!-- Sign up tab -->
-   <ion-tab title="Sign Up" icon-off="ion-ios-personadd-outline" icon-on="ion-ios-personadd" ui-sref="home.signup">
+    <!--  tab -->
+  <ion-tab title="Sign Up" icon-off="ion-ios-personadd-outline" icon-on="ion-ios-personadd" ui-sref="home.dash">
     <ion-nav-view name="home-dash"></ion-nav-view>
   </ion-tab>
+
+  <ion-nav-view name="menu"></ion-nav-view>
 
 </ion-tabs>
