--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus enable-menu-with-back-views="false">
+<ion-side-menus enable-menu-with-back-views>
   <ion-side-menu-content>
     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
@@ -9,7 +9,7 @@
         </button>
       </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-nav-view name="home-dash"></ion-nav-view>
+    <ion-nav-view name="menu"></ion-nav-view>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
@@ -18,17 +18,44 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item menu-close ui-sref="dashboard.client-dashboard">
+          My Journal Dashboard
         </ion-item>
-        <ion-item menu-close href="#/app/search">
-          Search
+        <ion-item menu-close ui-sref="dashboard.address-details">
+          Address Details
+        </ion-item>
+        <ion-item menu-close ui-sref="dashboard.connect-with-my-agent">
+          Connect With My Agent
         </ion-item>
         <ion-item menu-close href="#/app/browse">
-          Browse
+          Real Estate Dictionary 
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
-          Playlists
+          To Do Lists
+        </ion-item>
+        <ion-item menu-close href="#">
+          Decorating Plans
+        </ion-item>
+        <ion-item menu-close href="">
+          Manage Dimensions
+        </ion-item>
+        <ion-item menu-close href="">
+          Room Photos
+        </ion-item>
+        <ion-item menu-close href="">
+          My Service Providers
+        </ion-item>
+        <ion-item menu-close href="">
+          Mortgage Principal Tracker
+        </ion-item>
+        <ion-item menu-close href="">
+          Reminders
+        </ion-item>
+        <ion-item menu-close href="">
+          Notes
+        </ion-item>
+        <ion-item menu-close href="">
+          Local Directory
         </ion-item>
       </ion-list>
     </ion-content>
