--- a/www/templates/tab-signup.html
+++ b/www/templates/tab-signup.html
@@ -9,5 +9,9 @@
 			<h4>Create An Agent Account</h4>
 			<a class="button button-block progress-button" ui-sref="home.realtor-step-1">Create Real Estate Agent Account</a>
 		</div>
+
+		<div id="test-content">
+			
+		</div>
 	</ion-content>
 </ion-view>
