--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -39,7 +39,7 @@
         <ion-item menu-close href="">
           Manage Dimensions
         </ion-item>
-        <ion-item menu-close href="">
+        <ion-item menu-close ui-sref="dashboard.room-photos">
           Room Photos
         </ion-item>
         <ion-item menu-close href="">
